gestion d'un second server socket pour les logs + clean

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ shadowJar {
     manifest {
         attributes 'Implementation-Title': 'PrincessRabbit',
                 'Implementation-Version': version,
-                'Main-Class': 'server.Main'
+                'Main-Class': 'server.SimpleServer'
     }
     baseName = project.name
 }
