--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # Package Files #
 *.jar
+!gradle/wrapper/gradle-wrapper.jar
 *.war
 *.nar
 *.ear
@@ -26,3 +27,4 @@ hs_err_pid*
 .idea
 build
 /gradle.properties
+logs/
